Fixed a layout issue with the column checkboxes in the report editor.

--- a/lms/static/css/reporting.css
+++ b/lms/static/css/reporting.css
@@ -309,6 +309,12 @@
 }
 #reporting .column-selector ul li {
     height: 1.5em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+#reporting .column-selector ul li.mouseover {
+    overflow: visible;
 }
 #reporting .column-selector li {
     position: relative;
